--- a/app/assets/index.css
+++ b/app/assets/index.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   background-color: #303030;
   color: white;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: large;
+  font-size: x-large;
+  font-family:monospace;
+  box-sizing: border-box;
 }
