--- a/assets/index.css
+++ b/assets/index.css
@@ -7,10 +7,11 @@ body {
   background-color: #303030;
   color: white;
   font-size: x-large;
-  font-family:monospace;
+  font-family: monospace;
 }
 
 .content {
   width: 100%;
   height: 100%;
+  display: flex;
 }
